{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 202,
  "lineage": "ae9123e4-8008-e6a6-4d27-0eee7f4b0d7d",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:security-group/sg-047ad7e3956648e6a",
            "description": "Allow communication between EKS nodes and control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047ad7e3956648e6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "name": "eks-node-security-group",
            "name_prefix": "",
            "owner_id": "302263058495",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "t_my_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc6fac5828516661",
            "arn": "arn:aws:ec2:eu-west-1:302263058495:elastic-ip/eipalloc-0fc6fac5828516661",
            "association_id": "eipassoc-0be591cc61e4a7aef",
            "domain": "vpc",
            "id": "eipalloc-0fc6fac5828516661",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-079189862905dfa55",
            "private_dns": "ip-10-0-1-182.eu-west-1.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-54-76-175-245.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.76.175.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "t_my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:internet-gateway/igw-0744223c50e8412ad",
            "id": "igw-0744223c50e8412ad",
            "owner_id": "302263058495",
            "tags": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "t_my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc6fac5828516661",
            "association_id": "eipassoc-0be591cc61e4a7aef",
            "connectivity_type": "public",
            "id": "nat-09b919a1dc882c15e",
            "network_interface_id": "eni-079189862905dfa55",
            "private_ip": "10.0.1.182",
            "public_ip": "54.76.175.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0becc63fbfd4e32e7",
            "tags": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:route-table/rtb-07936e76c6c7dd84d",
            "id": "rtb-07936e76c6c7dd84d",
            "owner_id": "302263058495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b919a1dc882c15e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:route-table/rtb-057bcd50669670148",
            "id": "rtb-057bcd50669670148",
            "owner_id": "302263058495",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0744223c50e8412ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dd14fec00d9ab60",
            "route_table_id": "rtb-07936e76c6c7dd84d",
            "subnet_id": "subnet-0b2c7945b00bbffd7"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_3",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05293526040e3cf62",
            "route_table_id": "rtb-07936e76c6c7dd84d",
            "subnet_id": "subnet-05d20ecd0359dc04c"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_4",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007c2527ef1884b20",
            "route_table_id": "rtb-057bcd50669670148",
            "subnet_id": "subnet-0becc63fbfd4e32e7"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0599ebec515fa4a19",
            "route_table_id": "rtb-057bcd50669670148",
            "subnet_id": "subnet-05fbc4e0fdf271a60"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_2",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:subnet/subnet-0becc63fbfd4e32e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0becc63fbfd4e32e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263058495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:subnet/subnet-05fbc4e0fdf271a60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fbc4e0fdf271a60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263058495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:subnet/subnet-0b2c7945b00bbffd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2c7945b00bbffd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263058495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:subnet/subnet-05d20ecd0359dc04c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d20ecd0359dc04c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302263058495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b8001319e102410d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "t_my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:302263058495:vpc/vpc-0b8001319e102410d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a693fa717e6ad7da",
            "default_route_table_id": "rtb-09a538eadf5d7f46e",
            "default_security_group_id": "sg-0c9849382ce2c8c7c",
            "dhcp_options_id": "dopt-06a50d8bfb32db08d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8001319e102410d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a538eadf5d7f46e",
            "owner_id": "302263058495",
            "tags": {
              "Name": "demo_sabry",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}